; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/i2c/busses/extr_i2c-bfin-twi.c_bfin_twi_interrupt_entry.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/i2c/busses/extr_i2c-bfin-twi.c_bfin_twi_interrupt_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bfin_twi_iface = type { i32, i32 }

@IRQ_HANDLED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @bfin_twi_interrupt_entry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bfin_twi_interrupt_entry(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.bfin_twi_iface*, align 8
  %6 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = bitcast i8* %7 to %struct.bfin_twi_iface*
  store %struct.bfin_twi_iface* %8, %struct.bfin_twi_iface** %5, align 8
  %9 = load %struct.bfin_twi_iface*, %struct.bfin_twi_iface** %5, align 8
  %10 = getelementptr inbounds %struct.bfin_twi_iface, %struct.bfin_twi_iface* %9, i32 0, i32 0
  %11 = load i64, i64* %6, align 8
  %12 = call i32 @spin_lock_irqsave(i32* %10, i64 %11)
  %13 = load %struct.bfin_twi_iface*, %struct.bfin_twi_iface** %5, align 8
  %14 = getelementptr inbounds %struct.bfin_twi_iface, %struct.bfin_twi_iface* %13, i32 0, i32 1
  %15 = call i32 @del_timer(i32* %14)
  %16 = load %struct.bfin_twi_iface*, %struct.bfin_twi_iface** %5, align 8
  %17 = call i32 @bfin_twi_handle_interrupt(%struct.bfin_twi_iface* %16)
  %18 = load %struct.bfin_twi_iface*, %struct.bfin_twi_iface** %5, align 8
  %19 = getelementptr inbounds %struct.bfin_twi_iface, %struct.bfin_twi_iface* %18, i32 0, i32 0
  %20 = load i64, i64* %6, align 8
  %21 = call i32 @spin_unlock_irqrestore(i32* %19, i64 %20)
  %22 = load i32, i32* @IRQ_HANDLED, align 4
  ret i32 %22
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @del_timer(i32*) #1

declare dso_local i32 @bfin_twi_handle_interrupt(%struct.bfin_twi_iface*) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
